traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/story/script.rpy", line 62, in script call
    call chapter1 from _call_chapter1
  File "game/story/end_demo.rpy", line 9, in script
    show text narrator "Thank you for playing the demo for {p}Heart's Depth!{w}":
  File "game/plugins/layered_image_mask_tips.rpy", line 159, in cutin_show
    return OG_SHOW(name, at_list, layer, *args, **kwargs)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    narrator"Thank you for playing the demo for {p}Heart's Depth!{w}"
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/story/script.rpy", line 62, in script call
    call chapter1 from _call_chapter1
  File "game/story/end_demo.rpy", line 9, in script
    show text narrator "Thank you for playing the demo for {p}Heart's Depth!{w}":
  File "renpy/ast.py", line 1357, in execute
    show_imspec(self.imspec, atl=getattr(self, "atl", None))
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/ast.py", line 730, in show_imspec
    renpy.config.show(
    ~~~~~~~~~~~~~~~~~^
        name, at_list=at_list, layer=layer, what=expression, zorder=zorder, tag=tag, behind=behind, atl=atl
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "game/plugins/layered_image_mask_tips.rpy", line 159, in cutin_show
    return OG_SHOW(name, at_list, layer, *args, **kwargs)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/displayexports.py", line 486, in show
    if not base.find_target() and renpy.config.missing_show:
           ~~~~~~~~~~~~~~~~^^                               
  File "renpy/display/image.py", line 444, in find_target
    self.target = target._duplicate(a)
                  ~~~~~~~~~~~~~~~~~^^^
  File "renpy/text/extras.py", line 267, in _duplicate
    string = renpy.python.py_eval(param)
             ~~~~~~~~~~~~~~~~~~~~^^^^^^^
  File "renpy/python.py", line 1290, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    narrator"Thank you for playing the demo for {p}Heart's Depth!{w}"
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.4.1.25072401
HeartsDepthDEMO 3.0
Wed Mar 11 21:20:48 2026
